[package]
name = "yaws"
version = "0.1.0"
authors = ["Hayley <github.com@codingcat.nl>"]
edition = "2018"

[[bin]]
name = "mybin"
path = "src/bin.rs"

[dependencies]
async-tls = "0.7" #for TLS handshake for wss://
http = "0.2" #for uri parsing

#for asyn tcp.
[dependencies.async-std]
version = "1.6"
features = ["unstable"]
